# graduation-project

bysj-geological-hazard-warning-system/: .env.example  docker-compose.yml  readme.md
bysj-geological-hazard-warning-system/backend/: Dockerfile  pyproject.toml
bysj-geological-hazard-warning-system/backend/app/: celery_app.py  db.py  jiusi_client.py  main.py  models.py  schemas.py  warning_filters.py  websocket_manager.py
bysj-geological-hazard-warning-system/backend/app/agents/: data_sources.py  graph.py  llm_provider.py  scraper_parsers.py
bysj-geological-hazard-warning-system/backend/app/core/: config.py
bysj-geological-hazard-warning-system/backend/app/data/: tianqi_slug_overrides.json
bysj-geological-hazard-warning-system/backend/app/integrations/: __init__.py  amap_weather.py
bysj-geological-hazard-warning-system/backend/app/routes/: regions.py  warnings.py
bysj-geological-hazard-warning-system/backend/app/tools/: __init__.py  build_cma_region_station_map.py
bysj-geological-hazard-warning-system/deploy/: nginx.conf
bysj-geological-hazard-warning-system/docs/: PRODUCT_DOC.md  TECHNICAL_DOC.md  THESIS_REFERENCE.md
bysj-geological-hazard-warning-system/frontend/: Dockerfile  index.html  package.json  tsconfig.json
bysj-geological-hazard-warning-system/frontend/src/: App.vue  main.ts  style.css
bysj-geological-hazard-warning-system/frontend/src/components/: MapView.vue
bysj-geological-hazard-warning-system/frontend/src/services/: api.ts  ws.ts
bysj-geological-hazard-warning-system/tools/: build-tianqi-overrides.ps1  debug-scraper.ps1
