[tool.poetry]
name = "geological-hazard-backend"
version = "0.1.0"
description = "Geological hazard warning system backend (FastAPI + Celery + PostgreSQL + Redis)"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic = "^2.8.0"
pydantic-settings = "^2.5.0"
SQLAlchemy = "^2.0.34"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.2"
celery = "^5.4.0"
redis = "^5.0.8"
httpx = "^0.27.0"
beautifulsoup4 = "^4.12.3"
pypinyin = "^0.52.0"
python-dotenv = "^1.0.1"
openpyxl = "^3.1.5"
langgraph = "*"
openai = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

